--- a/pages/Curriculum2.html
+++ b/pages/Curriculum2.html
@@ -14,6 +14,69 @@
             <p id="texto">Fullstack Web developer</p>
         </span>
         <p id="texto2">System technologist</p>
-    </div> 
+    </div>
+    <div class="fotoyo"><span><img src="../assets/img/fotoyo.jpg"span>
+        <div class="separador"></div>
+        <p><strong class id="marcas">Facebook: </strong><a href="https://es-la.facebook.com/kevindaniel.murciagarcia">Kevin Daniel Murcia Garcia</a></p>
+        <p><strong class id="marcas">Correo: </strong><a href="https://www.google.com/intl/es-419/gmail/about/">Kdmurcia6@misena.edu.co</a></p>
+        <div class="separador"></div>
+        <p class="frases">"If my mind can <strong class id="marcas">conceive it</strong>
+            <br>and my heart can believe it
+            <br>then <strong class id="marcas">i can achieve it</strong>."
+            <br> <i>-Muhhammad Ali</i>
+        </p></span></div>
+    <div class="todo">
+        <h3 class="subtitulo">About me...</h3>
+        <p class="texto">My name is Kevin and i am studying "nalysis and Development of Information Systems",
+        <br>in the Center of industry and commerce (SENA).
+        <br>Currently i try to make a Videogame and one day i wish was succesfully.
+        </p>    
+        <div class="separador"></div>
+       </div>        
+        <div class="todo2">
+        <p><strong class id="marcas">Age: </strong>17</p>
+        <p><strong class id="marcas">Residence:</strong> Colombia</p>
+        <p><strong class id="marcas">Phone</strong>: 315 8096274</p>
+        <p><strong class id="marcas">Date of birth</strong>: 23/12/2004</p>
+        </p>
+        <div class="separador"></div>
+    </div>
+    <div class="todo2">
+        <dl>
+            <dt class id="marcas">Technician in analysis and development of information systems:</dt>
+            <dd>2022. <a href="https://www.sena.edu.co" target="_blank">Servicio Nacional de aprendizaje SENA</a></dd>
+        </dl>
+        <dl >
+            <dt class id="marcas">System technique:</dt>
+            <dd>2021. <a href="https://www.sena.edu.co" target="_blank"> Servicio Nacional de aprendizaje SENA</a></dd>
+        </dl>
+        <dl>    
+            <dt class id="marcas">Secondary:</dt>
+            <dd>2021. IE Augusto E Medina De Comfenalco</dd>
+        </dl>
+        <dl>
+            <dt class id="marcas">Primary:</dt>
+            <dd>2016. Colegio Liceo Dios Niño</dd>
+        </dl>  
+        <div class="separador"></div>
+    </div>
+    <div class="todo2">
+    <span class="skills">
+        <h1 class="encabezado">Skills & Hobbies</h1>
+        <div class="separador"></div>
+        <h3>Skills...</h3>           
+        <p> ◙ I am very good with computers, smartphones, etc..</p>
+        <p> ◙ I am really worker and i try to make the best i can</p>
+        <p> ◙ I can speak spanish & english</p>
+        <div class="separador"></div>
+        <h3>Hobbies...</h3> 
+        <p>I use my free time listen music, programming.
+        <br>i usually play video games in my break times
+        <br>and i like go to ride bike</p>
+        <div class="separador"></div>
+    </span>
+</div>
+            
+   
 </body>
 </html>
